# CompetitiveProgramming

./: .clang-format  .gitignore  CMakeLists.txt  README.md
ABC001-010/ABC001/: A_積雪深差.cpp  B_視程の通報.cpp  C_風力観測.cpp
ABC001-010/ABC002/: B_罠.cpp
ABC001-010/ABC003/: A_AtCoder社の給料.cpp  B_AtCoderトランプ.cpp  C_AtCoderプログラミング講座.cpp  D_AtCoder社の冬.cpp
ABC001-010/ABC005/: D_おいしいたこ焼きの焼き方.cpp
ABC001-010/ABC006/: D_トランプ挿入ソート.cpp
ABC001-010/ABC007/: A_植木算.cpp  B_辞書式順序.cpp
ABC001-010/ABC008/: A_アルバム.cpp  B_投票.cpp  C_コイン.cpp
ABC001-010/ABC009/: A_引っ越し作業.cpp  B_心配性な富豪、ファミリーレストランに行く。.cpp
ABC001-010/ABC010/: A_ハンドルネーム.cpp  C_浮気調査.cpp  D_浮気予防.cpp
ABC011-020/ABC011/: B_名前の確認.cpp  C_123引き算.cpp  D_大ジャンプ.cpp
ABC011-020/ABC012/: A_スワップ.cpp  B_入浴時間.cpp
ABC011-020/ABC013/: A_A.cpp  D_阿弥陀.cpp
ABC011-020/ABC014/: D_閉路.cpp
ABC011-020/ABC015/: A_高橋くんの研修.cpp  B_高橋くんの集計.cpp  C_高橋くんのバグ探し.cpp
ABC011-020/ABC017/: B_choku語.cpp  D_サプリメント.cpp
ABC011-020/ABC018/: B_文字列の反転.cpp
ABC011-020/ABC019/: D_高橋くんと木の直径.cpp
ABC011-020/ABC020/: B_足し算.cpp
ABC021-030/ABC021/: A_足し算.cpp
ABC021-030/ABC022/: A_best_body.cpp  B_bumble_bee.cpp  C_blue_bird.cpp  D_big_bang.cpp
ABC021-030/ABC023/: A_加算王.cpp
ABC021-030/ABC024/: B_自動ドア.cpp  D_動的計画法.cpp
ABC021-030/ABC025/: B_双子とスイカ割り.cpp  C_双子と○×ゲーム.cpp  D_25個の整数.cpp
ABC021-030/ABC026/: A_掛け算の最大値.cpp  C_高橋君の給料.cpp  D_高橋君ボール1号.cpp
ABC021-030/ABC027/: A_長方形.cpp  B_島と橋.cpp
ABC021-030/ABC028/: B_文字数カウント.cpp  D_乱数生成.cpp
ABC021-030/ABC029/: B_カキ.cpp
ABC021-030/ABC030/: D_へんてこ辞書.cpp
ABC031-040/ABC031/: A_ゲーム.cpp  C_数列ゲーム.cpp  D_語呂合わせ.cpp
ABC031-040/ABC032/: C_列.cpp  D_ナップサック問題.cpp
ABC031-040/ABC033/: C_数式の書き換え.cpp  D_三角形の分類.cpp
ABC031-040/ABC034/: B_ペア.cpp  D_食塩水.cpp
ABC031-040/ABC035/: D_トレジャーハント.cpp
ABC031-040/ABC037/: A_饅頭.cpp
ABC031-040/ABC038/: B_ディスプレイ.cpp  D_プレゼント.cpp
ABC031-040/ABC039/: B_エージェント高橋君.cpp  D_画像処理高橋君.cpp
ABC031-040/ABC040/: B_□□□□□.cpp
ABC041-050/ABC041/: A_index.cpp  B_直方体.cpp  D_footrace.cpp
ABC041-050/ABC042/: A_iroha_and_haiku_abc_edition.cpp
ABC041-050/ABC043/: C_be_together.cpp
ABC041-050/ABC044/: B_beautiful_strings.cpp  D_digit_sum.cpp
ABC041-050/ABC045/: B_card_game_for_three_abc_edit.cpp  C_many_formulas.cpp  D_snukes_coloring.cpp
ABC041-050/ABC046/: B_painting_balls_with_atcodeer.cpp  C_atcodeer_and_election_report.cpp
ABC041-050/ABC047/: A_fighting_over_candies.cpp  B_snukes_coloring_2_abc_edit.cpp  C_1d_reversi.cpp  D_an_invisible_hand.cpp
ABC041-050/ABC048/: B_between_a_and_b.cpp
ABC041-050/ABC049/: D_connectivity.cpp
ABC041-050/ABC050/: A_addtion_and_subtraction_easy.cpp  B_contest_with_drinks_easy.cpp  C_lining_up.cpp
ABC051-060/ABC051/: B_sum_of_three_integers.cpp
ABC051-060/ABC052/: B_increment_decrement.cpp  C_factors_of_factorial.cpp  D_walk_and_teleport.cpp
ABC051-060/ABC053/: A_abc_arc.cpp  B_a_to_z_string.cpp  C_x_yet_another_die_game.cpp
ABC051-060/ABC054/: D_mixing_experiment.cpp
ABC051-060/ABC055/: C_scc_puzzle.cpp
ABC051-060/ABC056/: C_go_home.cpp  D_no_need.cpp
ABC051-060/ABC057/: A_remaining_time.cpp  B_checkpoints.cpp
ABC051-060/ABC058/: B_∵∴∵.cpp  C_dubious_document.cpp  D_###.cpp
ABC051-060/ABC059/: B_comparison.cpp  C_sequence.cpp  D_alice_and_brown.cpp
ABC051-060/ABC060/: A_shiritori.cpp  B_choose_integers.cpp  C_sentou.cpp  D_simple_knapsack.cpp
ABC061-070/ABC061/: B_counting_roads.cpp  C_big_array.cpp
ABC061-070/ABC062/: A_grouping.cpp  B_picture_frame.cpp  D_3n_numbers.cpp
ABC061-070/ABC063/: A_restricted.cpp  D_widespread.cpp
ABC061-070/ABC064/: C_colorful_leaderboard.cpp
ABC061-070/ABC066/: B_ss.cpp  a.out  out.txt
ABC061-070/ABC067/: A_sharing_cookies.cpp  C_splitting_pile.cpp
ABC061-070/ABC068/: B_break_number.cpp  C_cat_snuke_and_voyage.cpp  D_decrease_contestant_ver.cpp
ABC061-070/ABC069/: A_k_city.cpp
ABC061-070/ABC070/: B_two_switches.cpp  D_transit_tree_path.cpp
ABC071-080/ABC071/: A_meal_delivery.cpp  B_not_found.cpp  D_coloring_dominoes.cpp
ABC071-080/ABC072/: A_sandglass_2.cpp  B_odd_string.cpp  C_together.cpp
ABC071-080/ABC073/: A_september_9.cpp  C_write_and_erase.cpp
ABC071-080/ABC074/: A_bichrome_cells.cpp  B_collecting_balls.cpp  D_restoring_road_network.cpp
ABC071-080/ABC075/: A_one_out_of_three.cpp  B_minesweeper.cpp  C_bridge.cpp  D_axis_parallel_rectangle.cpp
ABC071-080/ABC076/: B_addition_and_multiplication.cpp  C_dubious_document_2.cpp  D_atcoder_express.cpp
ABC071-080/ABC077/: A_rotation.cpp  B_around_square.cpp
ABC071-080/ABC078/: B_isu.cpp  D_abs.cpp
ABC071-080/ABC079/: B_lucas_number.cpp  C_train_ticket.cpp  D_wall.cpp
ABC071-080/ABC080/: B_harshad_number.cpp  C_shopping_street.cpp
ABC081-090/ABC081/: C_not_so_diverse.cpp  D_non_decreasing.cpp
ABC081-090/ABC082/: A_round_up_the_mean.cpp  B_two_anagrams.cpp  C_good_sequence.cpp
ABC081-090/ABC083/: A_libra.cpp  B_some_sums.cpp  C_multiple_gift.cpp
ABC081-090/ABC084/: B_postal_code.cpp  C_special_trains.cpp
ABC081-090/ABC085/: A_already_2018.cpp  B_kagami_mochi.cpp  C_otoshidama.cpp  D_katana_thrower.cpp
ABC081-090/ABC086/: C_traveling.cpp  D_checker.cpp
ABC081-090/ABC087/: A_buying_sweets.cpp  C_candies.cpp
ABC081-090/ABC088/: A_infinite_coins.cpp  C_takahashis_information.cpp
ABC081-090/ABC089/: A_grouping_2.cpp  B_hina_arare.cpp  D_practical_skill_test.cpp
ABC081-090/ABC090/: B_palindromic_numbers.cpp
ABC091-100/ABC091/: A_two_coins.cpp
ABC091-100/ABC092/: C_traveling_plan.cpp  D_grid_component.cpp
ABC091-100/ABC093/: A_abc_of_abc.cpp  B_small_and_large_integers.cpp  D_worst_case.cpp
ABC091-100/ABC094/: A_cats_and_dogs.cpp  C_many_medians.cpp  D_binomial_coefficients.cpp
ABC091-100/ABC095/: A_something_on_it.cpp  C_half_and_half.cpp
ABC091-100/ABC096/: B_maximum_sum.cpp
ABC091-100/ABC097/: C_k-th_substring.cpp
ABC091-100/ABC098/: A_add_sub_mul.cpp  B_cut_and_count.cpp  D_xor_sum_2.cpp
ABC091-100/ABC099/: A_abd.cpp  D_good_grid.cpp
(+2343 files in other folders)
